# semicolon-lapack

./: .gitignore  LAPACK_divergence.txt  LICENSE  README.md  meson.build  meson.options
benchmark/: README.md  bench_common.h  bench_dgeqrf.c  bench_dgeqrf_fortran.c  bench_dgetrf.c  bench_dgetrf_fortran.c  bench_dgetrf_lapacke.c  bench_flops.h  meson.build  run_bench.py
src/: lapack_tuning.c  meson.build  xerbla.c
src/auxiliary/: ieeeck.c  ilaenv2stage.c  ilaver.c  iparam2stage.c  xerbla.c
src/c/: cbbcsd.c  cbdsqr.c  cdrscl.c  cgbbrd.c  cgbcon.c  cgbequ.c  cgbequb.c  cgbrfs.c  cgbsv.c  cgbsvx.c  cgbtf2.c  cgbtrf.c  cgbtrs.c  cgebak.c  cgebal.c  cgebd2.c  cgebrd.c  cgecon.c  cgedmd.c  cgedmdq.c  cgeequ.c  cgeequb.c  cgees.c  cgeesx.c  cgeev.c  cgeevx.c  cgehd2.c  cgehrd.c  cgejsv.c  cgelq.c  cgelq2.c  cgelqf.c  cgelqt.c  cgelqt3.c  cgels.c  cgelsd.c  cgelss.c  cgelst.c  cgelsy.c  cgemlq.c  (+442 more)
src/d/: dbbcsd.c  dbdsdc.c  dbdsqr.c  dbdsvdx.c  ddisna.c  dgbbrd.c  dgbcon.c  dgbequ.c  dgbequb.c  dgbrfs.c  dgbsv.c  dgbsvx.c  dgbtf2.c  dgbtrf.c  dgbtrs.c  dgebak.c  dgebal.c  dgebd2.c  dgebrd.c  dgecon.c  dgedmd.c  dgedmdq.c  dgeequ.c  dgeequb.c  dgees.c  dgeesx.c  dgeev.c  dgeevx.c  dgehd2.c  dgehrd.c  dgejsv.c  dgelq.c  dgelq2.c  dgelqf.c  dgelqt.c  dgelqt3.c  dgels.c  dgelsd.c  dgelss.c  dgelst.c  (+454 more)
src/fortran_shim/: meson.build  shim_auxiliary.c  shim_complex_double.c  shim_complex_single.c  shim_double.c  shim_single.c
src/include/: cblas.h  internal_build_defs.h  lapack_name_map.h  lapack_tuning.h  semicolon_cblas.h  semicolon_lapack_auxiliary.h  semicolon_lapack_complex_double.h  semicolon_lapack_complex_single.h  semicolon_lapack_double.h  semicolon_lapack_single.h
src/s/: ieeeck.c  ilaenv2stage.c  ilaslc.c  ilaslr.c  iparam2stage.c  iparmq.c  sbbcsd.c  sbdsdc.c  sbdsqr.c  sbdsvdx.c  sdisna.c  sgbbrd.c  sgbcon.c  sgbequ.c  sgbequb.c  sgbrfs.c  sgbsv.c  sgbsvx.c  sgbtf2.c  sgbtrf.c  sgbtrs.c  sgebak.c  sgebal.c  sgebd2.c  sgebrd.c  sgecon.c  sgedmd.c  sgedmdq.c  sgeequ.c  sgeequb.c  sgees.c  sgeesx.c  sgeev.c  sgeevx.c  sgehd2.c  sgehrd.c  sgejsv.c  sgelq.c  sgelq2.c  sgelqf.c  (+448 more)
src/z/: dzsum1.c  ilazlc.c  ilazlr.c  izmax1.c  zbbcsd.c  zbdsqr.c  zcgesv.c  zcposv.c  zdrscl.c  zgbbrd.c  zgbcon.c  zgbequ.c  zgbequb.c  zgbrfs.c  zgbsv.c  zgbsvx.c  zgbtf2.c  zgbtrf.c  zgbtrs.c  zgebak.c  zgebal.c  zgebd2.c  zgebrd.c  zgecon.c  zgedmd.c  zgedmdq.c  zgeequ.c  zgeequb.c  zgees.c  zgeesx.c  zgeev.c  zgeevx.c  zgehd2.c  zgehrd.c  zgejsv.c  zgelq.c  zgelq2.c  zgelqf.c  zgelqt.c  zgelqt3.c  (+445 more)
tests/: TOLERANCE.md  chkxer.c  lapack_tuning_test.c  meson.build  test_dchkbb.c  test_dchkbd.c  test_dchkbk.c  test_dchkbl.c  test_dchkec.c  test_dchkeq.c  test_dchkgb.c  test_dchkge.c  test_dchkgg.c  test_dchkgk.c  test_dchkgt.c  test_dchkhs.c  test_dchklq.c  test_dchklqt.c  test_dchklqtp.c  test_dchkorhr_col.c  test_dchkpb.c  test_dchkpo.c  test_dchkpp.c  test_dchkps.c  test_dchkpt.c  test_dchkq3.c  test_dchkql.c  test_dchkqp3rk.c  test_dchkqr.c  test_dchkqrt.c  test_dchkqrtp.c  test_dchkrfp.c  test_dchkrq.c  test_dchksb.c  test_dchksb2stg.c  test_dchksp.c  test_dchkst.c  test_dchkst2stg.c  test_dchksy.c  test_dchksy_aa.c  (+50 more)
tests/c/: meson.build  test_cchkbb.c  test_cchkbd.c  test_cchkbk.c  test_cchkbl.c  test_cchkdmd.c  test_cchkec.c  test_cchkeq.c  test_cchkgb.c  test_cchkge.c  test_cchkgg.c  test_cchkgk.c  test_cchkgl.c  test_cchkgt.c  test_cchkhb.c  test_cchkhb2stg.c  test_cchkhe.c  test_cchkhe_aa.c  test_cchkhe_aa_2stage.c  test_cchkhe_rk.c  test_cchkhe_rook.c  test_cchkhp.c  test_cchkhs.c  test_cchklq.c  test_cchklqt.c  test_cchklqtp.c  test_cchkpb.c  test_cchkpo.c  test_cchkpp.c  test_cchkps.c  test_cchkpt.c  test_cchkq3.c  test_cchkql.c  test_cchkqp3rk.c  test_cchkqr.c  test_cchkqrt.c  test_cchkqrtp.c  test_cchkrfp.c  test_cchkrq.c  test_cchksp.c  (+57 more)
tests/ci/: msvc_consumer_test.c  openblas_info.c  zhpevx_debug.c
tests/d/: meson.build  test_dchkbb.c  test_dchkbd.c  test_dchkbk.c  test_dchkbl.c  test_dchkdmd.c  test_dchkec.c  test_dchkeq.c  test_dchkgb.c  test_dchkge.c  test_dchkgg.c  test_dchkgk.c  test_dchkgl.c  test_dchkgt.c  test_dchkhs.c  test_dchklq.c  test_dchklqt.c  test_dchklqtp.c  test_dchkorhr_col.c  test_dchkpb.c  test_dchkpo.c  test_dchkpp.c  test_dchkps.c  test_dchkpt.c  test_dchkq3.c  test_dchkql.c  test_dchkqp3rk.c  test_dchkqr.c  test_dchkqrt.c  test_dchkqrtp.c  test_dchkrfp.c  test_dchkrq.c  test_dchksb.c  test_dchksb2stg.c  test_dchksp.c  test_dchkst.c  test_dchkst2stg.c  test_dchksy.c  test_dchksy_aa.c  test_dchksy_aa_2stage.c  (+47 more)
tests/s/: meson.build  test_schkbb.c  test_schkbd.c  test_schkbk.c  test_schkbl.c  test_schkdmd.c  test_schkec.c  test_schkeq.c  test_schkgb.c  test_schkge.c  test_schkgg.c  test_schkgk.c  test_schkgl.c  test_schkgt.c  test_schkhs.c  test_schklq.c  test_schklqt.c  test_schklqtp.c  test_schkorhr_col.c  test_schkpb.c  test_schkpo.c  test_schkpp.c  test_schkps.c  test_schkpt.c  test_schkq3.c  test_schkql.c  test_schkqp3rk.c  test_schkqr.c  test_schkqrt.c  test_schkqrtp.c  test_schkrfp.c  test_schkrq.c  test_schksb.c  test_schksb2stg.c  test_schksp.c  test_schkst.c  test_schkst2stg.c  test_schksy.c  test_schksy_aa.c  test_schksy_aa_2stage.c  (+45 more)
tests/smoke/: meson.build  test_dgecon.c  test_dgeequ.c  test_dgees.c  test_dgeesx.c  test_dgeev.c  test_dgeevx.c  test_dgehrd.c  test_dgelqf.c  test_dgels.c  test_dgelsy.c  test_dgeqlf.c  test_dgeqp3.c  test_dgeqrf.c  test_dgerfs.c  test_dgerqf.c  test_dgesc2.c  test_dgesv.c  test_dgesvd.c  test_dgesvx.c  test_dgetc2.c  test_dgetrf.c  test_dgetri.c  test_dgetrs.c  test_dggsvd3.c  test_dgtcon.c  test_dgtrfs.c  test_dgtsv.c  test_dgtsvx.c  test_dgttrf.c  test_dgttrs.c  test_dhseqr.c  test_dlaswp.c  test_dlatmt_indexing.c  test_dorgqr.c  test_dormqr.c  test_dpocon.c  test_dpoequ.c  test_dporfs.c  test_dposv.c  (+19 more)
tests/testutils/: dbdt01.c  dbdt02.c  dbdt03.c  dbdt04.c  dbdt05.c  dgbt01.c  dgbt02.c  dgbt05.c  dgennd.c  dgeqls.c  dgerqs.c  dget01.c  dget02.c  dget03.c  dget04.c  dget06.c  dget07.c  dget08.c  dget10.c  dget22.c  dget23.c  dget24.c  dget31.c  dget33.c  dget35.c  dget36.c  dget39.c  dget54.c  dglmts.c  (+120 more)
(+901 files in other folders)
