# Meson build options for semicolon-lapack

option('blas', type: 'string', value: 'auto',
       description: 'BLAS vendor: auto, openblas, blis, or a pkg-config package name')

option('tests', type: 'boolean', value: true,
       description: 'Build and enable test suite')

option('benchmarks', type: 'boolean', value: false,
       description: 'Build benchmark executables for profiling')

option('fabi_shim', type: 'boolean', value: false,
       description: 'Build Fortran-ABI compatibility shim library (libsemilapack_fortran)')

option('USE_INT64', type: 'boolean', value: false,
       description: 'Use 64-bit integers for LAPACK index parameters')

option('SYMBOL_MANGLING', type: 'string', value: 'name##_64',
       description: 'If USE_INT64 is true, token-pasting pattern for ILP64 symbol names (e.g. name##_64, scipy_##name##_64)')
