# src/meson.build
# Build the semicolon-lapack library

# Precision-independent utilities
common_sources = files(
  'xerbla.c',
  'lapack_tuning.c',
)

# Double precision routines
d_sources = files(
  # Auxiliary
  'd/dlamch.c',
  'd/dlacn2.c',
  'd/dlacpy.c',
  'd/dlaic1.c',
  'd/dlag2s.c',
  'd/dlagtm.c',
  'd/dlange.c',
  'd/dlangb.c',
  'd/dlangt.c',
  'd/dlanhs.c',
  'd/dlansy.c',
  'd/dlansp.c',
  'd/dlantb.c',
  'd/dlantp.c',
  'd/dlantr.c',
  'd/dlapy2.c',
  'd/dlarmm.c',
  'd/dlaqgb.c',
  'd/dlaqge.c',
  'd/dlarf.c',
  'd/dlarf1f.c',
  'd/dlarf1l.c',
  'd/dlarfb.c',
  'd/dlarfg.c',
  'd/dlarfgp.c',
  'd/dlarft.c',
  'd/dlarfx.c',
  'd/dlargv.c',
  'd/dlarz.c',
  'd/dlarzb.c',
  'd/dlarzt.c',
  'd/dlartv.c',
  'd/dlascl.c',
  'd/dlaset.c',
  'd/dlassq.c',
  'd/dlatbs.c',
  'd/dlatdf.c',
  'd/dlatps.c',
  'd/dlatrs.c',
  'd/dlatrs3.c',
  'd/dlatrz.c',
  'd/drscl.c',
  # LU factorization family
  'd/dgesv.c',
  'd/dgetf2.c',
  'd/dgetrf.c',
  'd/dgetrf2.c',
  'd/dgetrs.c',
  'd/dgetri.c',
  'd/dgetc2.c',
  'd/dgesc2.c',
  'd/dgecon.c',
  'd/dgeequ.c',
  'd/dgeequb.c',
  'd/dgerfs.c',
  'd/dgesvx.c',
  'd/dlaswp.c',
  'd/dlapmt.c',
  'd/dtrti2.c',
  'd/dtrtri.c',
  'd/dtrtrs.c',
  'd/dsytf2.c',
  'd/dsgesv.c',
  # Symmetric indefinite family
  'd/dlasyf.c',
  'd/dsytrf.c',
  'd/dsytrs.c',
  'd/dsytri.c',
  'd/dsycon.c',
  'd/dsyrfs.c',
  'd/dsysv.c',
  'd/dsysvx.c',
  'd/dsyequb.c',
  'd/dsygs2.c',
  'd/dsygst.c',
  'd/dsygv.c',
  'd/dsygvd.c',
  'd/dsygvx.c',
  # Banded
  'd/dgbsv.c',
  'd/dgbtf2.c',
  'd/dgbtrf.c',
  'd/dgbtrs.c',
  'd/dgbcon.c',
  'd/dgbequ.c',
  'd/dgbequb.c',
  'd/dgbrfs.c',
  'd/dgbsvx.c',
  # Tridiagonal
  'd/dgtsv.c',
  'd/dgttrf.c',
  'd/dgttrs.c',
  'd/dgtts2.c',
  'd/dgtcon.c',
  'd/dgtrfs.c',
  'd/dgtsvx.c',
  # Cholesky factorization family
  'd/disnan.c',
  'd/dlauu2.c',
  'd/dlaqsp.c',
  'd/dlaqsy.c',
  'd/dlauum.c',
  'd/dpotf2.c',
  'd/dpotrf2.c',
  'd/dpotrf.c',
  'd/dpotrs.c',
  'd/dpotri.c',
  'd/dpstf2.c',
  'd/dpstrf.c',
  'd/dpoequ.c',
  'd/dposv.c',
  'd/dpocon.c',
  'd/dporfs.c',
  'd/dposvx.c',
  'd/dsposv.c',
  'd/dlat2s.c',
  # Packed Cholesky (PP)
  'd/dppequ.c',
  'd/dppcon.c',
  'd/dpptrf.c',
  'd/dpptri.c',
  'd/dpptrs.c',
  'd/dpprfs.c',
  'd/dppsv.c',
  'd/dppsvx.c',
  # Packed LDL Symmetric (SP)
  'd/dsptrf.c',
  'd/dsptrs.c',
  'd/dsptri.c',
  'd/dspcon.c',
  'd/dsprfs.c',
  'd/dspsv.c',
  'd/dspsvx.c',
  # Packed Symmetric Eigenvalue (SP)
  'd/dsptrd.c',
  'd/dspgst.c',
  'd/dopgtr.c',
  'd/dopmtr.c',
  'd/dspev.c',
  'd/dspevd.c',
  'd/dspevx.c',
  'd/dspgv.c',
  'd/dspgvd.c',
  'd/dspgvx.c',
  # Packed Triangular (TP)
  'd/dtptri.c',
  'd/dtpcon.c',
  'd/dtptrs.c',
  'd/dtprfs.c',
  # Positive Definite Banded (PB)
  'd/dlansb.c',
  'd/dlaqsb.c',
  'd/dpbtf2.c',
  'd/dpbtrf.c',
  'd/dpbtrs.c',
  'd/dpbequ.c',
  'd/dpbcon.c',
  'd/dpbrfs.c',
  'd/dpbsv.c',
  'd/dpbsvx.c',
  'd/dpbstf.c',
  # Symmetric Banded (SB)
  'd/dlar2v.c',
  'd/dsbtrd.c',
  'd/dsbev.c',
  'd/dsbevd.c',
  'd/dsbevx.c',
  'd/dsbev_2stage.c',
  'd/dsbevd_2stage.c',
  'd/dsbevx_2stage.c',
  'd/dsbgst.c',
  'd/dsbgv.c',
  'd/dsbgvd.c',
  'd/dsbgvx.c',
  # Triangular Banded (TB)
  'd/dtbtrs.c',
  'd/dtbcon.c',
  'd/dtbrfs.c',
  # Positive definite tridiagonal
  'd/dpttrf.c',
  'd/dptts2.c',
  'd/dpttrs.c',
  'd/dptcon.c',
  'd/dptrfs.c',
  'd/dptsv.c',
  'd/dptsvx.c',
  'd/dpteqr.c',
  'd/dstegr.c',
  # QR/LQ/QL/RQ factorization family
  'd/dgeqr2.c',
  'd/dgeqrf.c',
  'd/dgelq2.c',
  'd/dgelqf.c',
  'd/dgeql2.c',
  'd/dgeqlf.c',
  'd/dgerq2.c',
  'd/dgerqf.c',
  # Q generation
  'd/dorg2r.c',
  'd/dorgqr.c',
  'd/dorgl2.c',
  'd/dorglq.c',
  'd/dorg2l.c',
  'd/dorgql.c',
  'd/dorgr2.c',
  'd/dorgrq.c',
  # Q application
  'd/dorm2r.c',
  'd/dorm22.c',
  'd/dormqr.c',
  'd/dorml2.c',
  'd/dormlq.c',
  'd/dorm2l.c',
  'd/dormql.c',
  'd/dormr2.c',
  'd/dormrq.c',
  # QR with positive diagonal
  'd/dgeqr2p.c',
  'd/dgeqrfp.c',
  # QR with column pivoting
  'd/dlaqp2.c',
  'd/dlaqps.c',
  'd/dgeqp3.c',
  # Compact WY QR
  'd/dgeqrt2.c',
  'd/dgeqrt3.c',
  'd/dgeqrt.c',
  'd/dgemqrt.c',
  # Compact WY LQ
  'd/dgelqt3.c',
  'd/dgelqt.c',
  'd/dgemlqt.c',
  # Tall-Skinny QR/LQ
  'd/dlatsqr.c',
  'd/dlamtsqr.c',
  'd/dgeqr.c',
  'd/dgemqr.c',
  'd/dlaswlq.c',
  'd/dlamswlq.c',
  'd/dgelq.c',
  'd/dgemlq.c',
  # RZ factorization chain
  'd/dtzrzf.c',
  'd/dormr3.c',
  'd/dormrz.c',
  # Least squares drivers
  'd/dgels.c',
  'd/dgelsy.c',
  'd/dgelss.c',
  'd/dgelsd.c',
  # Least squares auxiliaries (for dgelsd)
  'd/dlalsd.c',
  'd/dlalsa.c',
  'd/dlals0.c',
  # Triangular condition/refinement
  'd/dtrcon.c',
  'd/dtrrfs.c',
  # Symmetric tridiagonal reduction
  'd/dsytrd.c',
  'd/dsytd2.c',
  'd/dlatrd.c',
  'd/dlarfy.c',
  'd/dorgtr.c',
  'd/dormtr.c',
  # Symmetric eigenvalue drivers
  'd/dsyev.c',
  'd/dsyevd.c',
  'd/dsyevr.c',
  'd/dsyevx.c',
  # Eigenvalue auxiliaries
  'd/dlae2.c',
  'd/dlaev2.c',
  'd/dlanst.c',
  'd/dlasrt.c',
  'd/dlartg.c',
  'd/dlasr.c',
  # Divide-and-conquer eigenvalue helpers
  'd/dlaed5.c',
  'd/dlaed6.c',
  # RRR (Relatively Robust Representation) helpers
  'd/dlarrc.c',
  'd/dlarrk.c',
  'd/dlarra.c',
  'd/dlarrf.c',
  'd/dlar1v.c',
  # Random number generation
  'd/dlaruv.c',
  'd/dlarnv.c',
  # dqds eigenvalue algorithm
  'd/dlasq2.c',
  'd/dlasq3.c',
  'd/dlasq4.c',
  'd/dlasq5.c',
  'd/dlasq6.c',
  # Tridiagonal eigenvalue LU (inverse iteration)
  'd/dlagtf.c',
  'd/dlagts.c',
  # Tridiagonal eigenvalue algorithms
  'd/dsterf.c',
  'd/dsteqr.c',
  'd/dlaebz.c',
  'd/dstebz.c',
  'd/dstein.c',
  # RRR (Relatively Robust Representation) helpers (additional)
  'd/dlaneg.c',
  'd/dlarrr.c',
  'd/dlarrb.c',
  'd/dlarrd.c',
  'd/dlarre.c',
  'd/dlarrj.c',
  'd/dlarrv.c',
  # Tridiagonal eigenvalue drivers
  'd/dstemr.c',
  'd/dstev.c',
  'd/dstevd.c',
  'd/dstevx.c',
  'd/dstevr.c',
  # Divide-and-conquer eigenvalue helpers (continued)
  'd/dlaed0.c',
  'd/dlaed1.c',
  'd/dlaed2.c',
  'd/dlaed3.c',
  'd/dlaed4.c',
  'd/dlaed7.c',
  'd/dlaed8.c',
  'd/dlaed9.c',
  'd/dlaeda.c',
  'd/dlamrg.c',
  'd/dstedc.c',
  # Non-symmetric eigenvalue foundation
  'd/dladiv2.c',
  'd/dladiv1.c',
  'd/dladiv.c',
  'd/dlanv2.c',
  # Non-symmetric eigenvalue Schur reordering
  'd/dlasy2.c',
  'd/dlaexc.c',
  'd/dtrexc.c',
  # Non-symmetric eigenvalue Hessenberg reduction
  'd/dgehd2.c',
  'd/dlahr2.c',
  'd/dgehrd.c',
  'd/dorghr.c',
  # Non-symmetric eigenvalue balancing
  'd/dgebal.c',
  'd/dgebak.c',
  # Non-symmetric eigenvalue eigenvectors
  'd/dlaln2.c',
  'd/dtrevc.c',
  'd/dtrevc3.c',
  # Non-symmetric eigenvalue Q application
  'd/dormhr.c',
  # Non-symmetric eigenvalue QR algorithm
  'd/dlaqr1.c',
  'd/dlahqr.c',
  'd/dlaqr5.c',
  'd/dlaqr2.c',
  'd/dlaqr4.c',
  'd/dlaqr3.c',
  'd/dlaqr0.c',
  'd/dhseqr.c',
  # Non-symmetric eigenvalue eigenvectors (inverse iteration)
  'd/dlaein.c',
  'd/dhsein.c',
  # Non-symmetric eigenvalue Sylvester and Schur reordering
  'd/dtrsyl.c',
  'd/dtrsyl3.c',
  'd/dtrsen.c',
  # Non-symmetric eigenvalue condition numbers
  'd/dlaqtr.c',
  'd/dtrsna.c',
  # Non-symmetric eigenvalue drivers
  'd/dgeev.c',
  'd/dgees.c',
  'd/dgeevx.c',
  'd/dgeesx.c',
  # SVD Phase 1: Foundation routines
  'd/dlas2.c',
  'd/dlasv2.c',
  'd/dlabrd.c',
  'd/dlasq1.c',
  # HSEQR parameters
  'd/iparmq.c',
  # SVD Phase 2: Bidiagonal reduction
  'd/dgebd2.c',
  'd/dgebrd.c',
  'd/dorgbr.c',
  'd/dormbr.c',
  # SVD Phase 3: Bidiagonal QR iteration
  'd/dbdsqr.c',
  # SVD Phase 4: Main SVD driver
  'd/dgesvd.c',
  # SVD Phase 5: Divide-and-Conquer chain
  'd/dlasdt.c',
  'd/dlasd5.c',
  'd/dlasd4.c',
  'd/dlasd8.c',
  'd/dlasd2.c',
  'd/dlasd3.c',
  'd/dlasd1.c',
  'd/dlasd7.c',
  'd/dlasd6.c',
  'd/dlasdq.c',
  'd/dlasd0.c',
  'd/dlasda.c',
  'd/dbdsdc.c',
  # SVD Phase 6: Divide-and-Conquer SVD driver
  'd/dgesdd.c',
  # SVD Phase 7: Eigenvalue-Based Path
  'd/dbdsvdx.c',
  'd/dgesvdx.c',
  # SVD Phase 8: Jacobi Methods
  'd/dgsvj0.c',
  'd/dgsvj1.c',
  'd/dgesvj.c',
  # SVD Phase 9: Preconditioned Jacobi SVD
  'd/dgesvdq.c',
  'd/dgejsv.c',
  # SVD Phase 10: Rotation and GSVD utilities
  'd/dlartgp.c',
  'd/dlartgs.c',
  'd/dlapll.c',
  'd/dlags2.c',
  # Generalized SVD (GSVD)
  'd/dtgsja.c',
  'd/dggsvp3.c',
  'd/dggsvd3.c',
  # Band to bidiagonal reduction
  'd/dgbbrd.c',
  # Generalized eigenvalue (GG) foundation
  'd/dggbal.c',
  'd/dggbak.c',
  'd/dgghrd.c',
  'd/dgghd3.c',
  'd/dhgeqz.c',
  'd/dlag2.c',
  'd/dlapy3.c',
  # Generalized eigenvalue (GG) eigenvectors and utilities
  'd/dtgevc.c',
  'd/dlagv2.c',
  'd/dtgsy2.c',
  'd/dtgsyl.c',
  'd/dtgsen.c',
  'd/dtgsna.c',
  'd/dtgex2.c',
  'd/dtgexc.c',
  # Aggressive early deflation QZ (dlaqz family)
  'd/dlaqz0.c',
  'd/dlaqz1.c',
  'd/dlaqz2.c',
  'd/dlaqz3.c',
  'd/dlaqz4.c',
  # Generalized eigenvalue (GG) drivers
  'd/dggev.c',
  'd/dgges.c',
  'd/dggev3.c',
  'd/dgges3.c',
  'd/dggevx.c',
  'd/dggesx.c',
  'd/dggqrf.c',
  'd/dggrqf.c',
  # Triangular-Pentagonal QR/LQ
  'd/dtprfb.c',
  'd/dtpqrt2.c',
  'd/dtplqt2.c',
  'd/dtpqrt.c',
  'd/dtplqt.c',
  'd/dtpmqrt.c',
  'd/dtpmlqt.c',
  # 2-Stage symmetric eigenvalue
  'd/iparam2stage.c',
  'd/ilaenv2stage.c',
  'd/dsb2st_kernels.c',
  'd/dsytrd_sb2st.c',
  'd/dsytrd_sy2sb.c',
  'd/dsytrd_2stage.c',
  'd/dsyev_2stage.c',
  'd/dsyevd_2stage.c',
  'd/dsyevr_2stage.c',
  'd/dsyevx_2stage.c',
  'd/dsygv_2stage.c',
  # RFP Storage Format
  'd/dlansf.c',
  'd/dtfttp.c',
  'd/dtfttr.c',
  'd/dtpttf.c',
  'd/dtpttr.c',
  'd/dtrttf.c',
  'd/dtrttp.c',
  'd/dtfsm.c',
  'd/dsfrk.c',
  'd/dtftri.c',
  'd/dpftrf.c',
  'd/dpftrs.c',
  'd/dpftri.c',
  # LDL Rook Pivoting (v2)
  'd/dlasyf_rook.c',
  'd/dsycon_rook.c',
  'd/dsytf2_rook.c',
  'd/dsytrf_rook.c',
  'd/dsytri_rook.c',
  'd/dsytrs_rook.c',
  # LDL Rook Pivoting (v3 - RK format)
  'd/dsyswapr.c',
  'd/dlasyf_rk.c',
  'd/dsytf2_rk.c',
  'd/dsytrs_3.c',
  'd/dsytrf_rk.c',
  'd/dsytri_3x.c',
  'd/dsytri_3.c',
  'd/dsycon_3.c',
  'd/dsyconv.c',
  'd/dsyconvf.c',
  'd/dsytri2.c',
  'd/dsytri2x.c',
  'd/dsytrs2.c',
  'd/dsyconvf_rook.c',
  'd/dsysv_rk.c',
  # LDL Aasen Method
  'd/dlasyf_aa.c',
  'd/dsytrs_aa.c',
  'd/dsytrf_aa.c',
  'd/dsysv_aa.c',
  'd/dsytrf_aa_2stage.c',
  'd/dsytrs_aa_2stage.c',
  'd/dsysv_aa_2stage.c',
  # Tall-Skinny QR/LQ
  'd/dlaorhr_col_getrfnp2.c',
  'd/dlaorhr_col_getrfnp.c',
  'd/dlarfb_gett.c',
  'd/dorhr_col.c',
  'd/dorgtsqr.c',
  'd/dorgtsqr_row.c',
  'd/dgetsqrhrt.c',
  # QR Rank-k Pivoting
  'd/dlaqp2rk.c',
  'd/dlaqp3rk.c',
  'd/dgeqp3rk.c',
  'd/dgelst.c',
  # CS Decomposition
  'd/dlapmr.c',
  'd/dorbdb1.c',
  'd/dorbdb2.c',
  'd/dorbdb3.c',
  'd/dorbdb4.c',
  'd/dorbdb5.c',
  'd/dorbdb6.c',
  'd/dorbdb.c',
  'd/dbbcsd.c',
  'd/dorcsd2by1.c',
  'd/dorcsd.c',
  'd/dgetsls.c',
  # Constrained Least Squares
  'd/dgglse.c',
  'd/dggglm.c',
  # Miscellaneous Computational
  'd/dpoequb.c',
  'd/ddisna.c',
  'd/dlacon.c',
  'd/dsysv_rook.c',
  # Auxiliary/Utility
  'd/dlaisnan.c',
  'd/dlabad.c',
  'd/iladlc.c',
  'd/iladlr.c',
  'd/ieeeck.c',
)

# Single precision routines (for mixed precision)
s_sources = files(
  's/slag2d.c',
  's/slaswp.c',
  's/sgetf2.c',
  's/sgetrf.c',
  's/sgetrs.c',
  's/sisnan.c',
  's/spotf2.c',
  's/spotrf.c',
  's/spotrs.c',
)

all_sources = common_sources + d_sources + s_sources

# Build as static library
libsemilapack = static_library('semilapack',
  all_sources,
  include_directories: [inc_pub, inc_src],
  dependencies: [openblas_dep, m_dep],
  install: true,
)

# Declare dependency for use by tests and other subprojects
semilapack_dep = declare_dependency(
  link_with: libsemilapack,
  include_directories: [inc_pub, inc_src],
  dependencies: [openblas_dep, m_dep],
)
